fix: text-align for barkInfo

--- a/src/components/screens/productsPage/BarkInfo/BarkInfo.module.scss
+++ b/src/components/screens/productsPage/BarkInfo/BarkInfo.module.scss
@@ -22,6 +22,10 @@
   margin-bottom: 35px;
 }
 
+.desc {
+  text-align: justify;
+}
+
 .mark {
   font-size: 1.2rem;
 }
